chore: fix photoShareModal width on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@ html,
 body,
 :root {
 	height: 100%;
-	overflow-x: hidden;
+	overflow-x: clip;
 }
 
 @theme {
